--- a/website/index.html
+++ b/website/index.html
@@ -65,34 +65,28 @@
       display: none;
     }
 
-    .icon-btn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
     .icon-btn.menu-toggle {
-      width: 20px;
-      height: 20px;
+      width: 24px;
+      height: 24px;
       position: relative;
       cursor: pointer;
     }
 
     .icon-btn.menu-toggle span {
       position: absolute;
-      height: 3px;
+      height: 2.5px;
       width: 100%;
       background-color: black;
       left: 0;
       transition: 0.3s ease;
     }
 
-    .icon-btn.menu-toggle span:nth-child(1) { top: 2px; }
-    .icon-btn.menu-toggle span:nth-child(2) { top: 8.5px; }
-    .icon-btn.menu-toggle span:nth-child(3) { bottom: 2px; }
+    .icon-btn.menu-toggle span:nth-child(1) { top: 5px; }
+    .icon-btn.menu-toggle span:nth-child(2) { top: 10.5px; }
+    .icon-btn.menu-toggle span:nth-child(3) { top: 16px; }
 
     .icon-btn.menu-toggle.open span:nth-child(1) {
-      top: 8.5px;
+      top: 10.5px;
       transform: rotate(45deg);
     }
 
@@ -101,14 +95,14 @@
     }
 
     .icon-btn.menu-toggle.open span:nth-child(3) {
-      top: 8.5px;
+      top: 10.5px;
       transform: rotate(-45deg);
     }
 
     .icon-btn.cart-toggle {
       position: relative;
-      width: 20px;
-      height: 20px;
+      width: 26px;
+      height: 26px;
       cursor: pointer;
     }
 
@@ -122,21 +116,21 @@
     .icon-btn.cart-toggle.open::after {
       content: "";
       position: absolute;
-      width: 100%;
-      height: 3px;
+      width: 26px;
+      height: 2.5px;
       background: black;
-      top: 50%;
+      top: 12px;
       left: 0;
       transform-origin: center;
       transition: 0.3s ease;
     }
 
     .icon-btn.cart-toggle.open::before {
-      transform: translateY(-50%) rotate(45deg);
+      transform: rotate(45deg);
     }
 
     .icon-btn.cart-toggle.open::after {
-      transform: translateY(-50%) rotate(-45deg);
+      transform: rotate(-45deg);
     }
 
     .icon-btn.cart-toggle.open img {
@@ -301,9 +295,34 @@
   </div>
 </header>
 
-<!-- Content omitted for brevity (keep your slider, product cards, etc.) -->
+<div class="image-box">
+  <div class="slider" id="slider">
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/FF5733');"></div>
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/33C3FF');"></div>
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/8D33FF');"></div>
+  </div>
+  <div class="arrow left" onclick="prevSlide()"></div>
+  <div class="arrow right" onclick="nextSlide()"></div>
+</div>
 
-<!-- Sidebars -->
+<a href="/jersey/red" style="text-decoration: none; color: inherit;">
+  <div class="product-image-box"></div>
+</a>
+<div class="product-info">
+  <div class="product-title">TWO-FIVE JERSEY</div>
+  <div class="product-color">RED</div>
+  <div class="product-price">$50.00</div>
+</div>
+
+<a href="/jersey/white" style="text-decoration: none; color: inherit;">
+  <div class="product-image-box"></div>
+</a>
+<div class="product-info">
+  <div class="product-title">TWO-FIVE JERSEY</div>
+  <div class="product-color">WHITE</div>
+  <div class="product-price">$50.00</div>
+</div>
+
 <nav id="sidebar" class="sidebar"><p>Menu sidebar content goes here.</p></nav>
 <nav id="cartSidebar" class="cart-sidebar"><p>Cart sidebar content goes here.</p></nav>
 
@@ -315,9 +334,29 @@
   const logoText = document.getElementById('logoText');
   const logoImage = document.getElementById('logoImage');
   const logoContainer = document.getElementById('logoContainer');
+  const slider = document.getElementById('slider');
   const cartCount = document.getElementById('cartCount');
 
+  let currentIndex = 0;
   let cartItems = 0;
+
+  const slides = slider.children;
+
+  function updateSlide(index) {
+    slider.style.transform = `translateX(-${index * 100}%)`;
+  }
+
+  function nextSlide() {
+    currentIndex = (currentIndex + 1) % slides.length;
+    updateSlide(currentIndex);
+  }
+
+  function prevSlide() {
+    currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+    updateSlide(currentIndex);
+  }
+
+  setInterval(nextSlide, 10000);
 
   menuToggle.addEventListener('click', () => {
     const isOpen = menuToggle.classList.toggle('open');
