--- a/website/index.html
+++ b/website/index.html
@@ -309,7 +309,7 @@
 </div>
 
 <a href="/jersey/red" style="text-decoration: none; color: inherit;">
-  <div class="https://github.com/mattscianna/mattscianna/blob/main/IMG_1183.png?raw=true"></div>
+  <div class="product-image-box"></div>
 </a>
 <div class="product-info">
   <div class="product-title">TWO-FIVE JERSEY</div>
