--- a/website/index.html
+++ b/website/index.html
@@ -309,8 +309,11 @@
 </div>
 
 <a href="/jersey/red" style="text-decoration: none; color: inherit;">
-  <div class="product-image-box"></div>
+  <div class="product-image-box">
+    <img src="YOUR_IMAGE_URL_HERE" alt="Red Jersey (Front)" class="jersey-img" />
+  </div>
 </a>
+
 <div class="product-info">
   <div class="product-title">TWO-FIVE JERSEY</div>
   <div class="product-color">RED</div>
@@ -318,8 +321,11 @@
 </div>
 
 <a href="/jersey/white" style="text-decoration: none; color: inherit;">
-  <div class="product-image-box"></div>
+  <div class="product-image-box">
+    <img src="YOUR_IMAGE_URL_HERE" alt="White Jersey (Front)" class="jersey-img" />
+  </div>
 </a>
+
 <div class="product-info">
   <div class="product-title">TWO-FIVE JERSEY</div>
   <div class="product-color">WHITE</div>
