--- a/website/index.html
+++ b/website/index.html
@@ -310,7 +310,7 @@
 
 <a href="/jersey/red" style="text-decoration: none; color: inherit;">
   <div class="product-image-box">
-    <img src="YOUR_IMAGE_URL_HERE" alt="Red Jersey (Front)" class="jersey-img" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1183.png?raw=true" alt="Red Jersey (Front)" class="jersey-img" />
   </div>
 </a>
 
