--- a/website/index.html
+++ b/website/index.html
@@ -326,7 +326,7 @@
 
 <a href="/jersey/white" style="text-decoration: none; color: inherit;">
   <div class="product-image-box">
-    <img src="YOUR_WHITE_JERSEY_IMAGE_URL_HERE.png" alt="White Jersey (Front)" class="jersey-img" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" alt="White Jersey (Front)" class="jersey-img" />
   </div>
 </a>
 <div class="product-info">
