--- a/website/index.html
+++ b/website/index.html
@@ -321,7 +321,7 @@
 
 <a href="/jersey/red" style="text-decoration: none; color: inherit;">
   <div class="product-image-box">
-    <img src="https://raw.githubusercontent.com/mattscianna/mattscianna/main/red-jersey.png" class="jersey-img" alt="Red Jersey" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1183.png?raw=true" class="jersey-img" alt="Red Jersey" />
   </div>
 </a>
 <div class="product-info">
