--- a/website/index.html
+++ b/website/index.html
@@ -332,7 +332,7 @@
 
 <a href="/jersey/white" style="text-decoration: none; color: inherit;">
   <div class="product-image-box">
-    <img src="https://raw.githubusercontent.com/mattscianna/mattscianna/main/white-jersey.png" class="jersey-img" alt="White Jersey" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" class="jersey-img" alt="White Jersey" />
   </div>
 </a>
 <div class="product-info">
