--- a/website/index.html
+++ b/website/index.html
@@ -322,27 +322,29 @@
   <div class="arrow right" onclick="nextSlide()"></div>
 </div>
 
-<a href="/jersey/red" style="text-decoration: none; color: inherit;">
-  <div class="product-image-box">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1183.png?raw=true" class="jersey-img" alt="Red Jersey" />
-  </div>
-  <div class="product-info">
-    <div class="product-title">TWO-FIVE JERSEY</div>
-    <div class="product-color">RED</div>
-    <div class="product-price">$50.00</div>
-  </div>
-</a>
+<div style="display: flex; flex-direction: column; align-items: center; margin-top: 40px;">
+  <a href="/jersey/red" style="text-decoration: none; color: inherit;">
+    <div class="product-image-box">
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1183.png?raw=true" class="jersey-img" alt="Red Jersey" />
+    </div>
+    <div class="product-info">
+      <div class="product-title">TWO-FIVE JERSEY</div>
+      <div class="product-color">RED</div>
+      <div class="product-price">$50.00</div>
+    </div>
+  </a>
 
-<a href="/jersey/white" style="text-decoration: none; color: inherit;">
-  <div class="product-image-box">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" class="jersey-img" alt="White Jersey" />
-  </div>
-  <div class="product-info">
-    <div class="product-title">TWO-FIVE JERSEY</div>
-    <div class="product-color">WHITE</div>
-    <div class="product-price">$50.00</div>
-  </div>
-</a>
+  <a href="/jersey/white" style="text-decoration: none; color: inherit;">
+    <div class="product-image-box">
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" class="jersey-img" alt="White Jersey" />
+    </div>
+    <div class="product-info">
+      <div class="product-title">TWO-FIVE JERSEY</div>
+      <div class="product-color">WHITE</div>
+      <div class="product-price">$50.00</div>
+    </div>
+  </a>
+</div>
 
 <nav id="sidebar" class="sidebar"><p>Menu sidebar content goes here.</p></nav>
 <nav id="cartSidebar" class="cart-sidebar"><p>Cart sidebar content goes here.</p></nav>
