--- a/website/index.html
+++ b/website/index.html
@@ -58,6 +58,8 @@
       line-height: 1;
       white-space: nowrap;
       margin-top: 2px;
+      transition: color 0.3s ease;
+      color: black;
     }
 
     .logo-image {
@@ -315,29 +317,7 @@
   <div class="arrow right" onclick="nextSlide()"></div>
 </div>
 
-<div style="display: flex; flex-direction: column; align-items: center; margin-top: 40px;">
-  <a href="/jersey/red" style="text-decoration: none; color: inherit;">
-    <div class="product-image-box fade-scroll">
-      <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1183.png?raw=true" class="jersey-img" alt="Red Jersey" />
-    </div>
-    <div class="product-info fade-scroll">
-      <div class="product-title">TWO-FIVE JERSEY</div>
-      <div class="product-color">RED</div>
-      <div class="product-price">$49.99 USD</div>
-    </div>
-  </a>
-
-  <a href="/jersey/white" style="text-decoration: none; color: inherit;">
-    <div class="product-image-box fade-scroll">
-      <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" class="jersey-img" alt="White Jersey" />
-    </div>
-    <div class="product-info fade-scroll">
-      <div class="product-title">TWO-FIVE JERSEY</div>
-      <div class="product-color">WHITE</div>
-      <div class="product-price">$49.99 USD</div>
-    </div>
-  </a>
-</div>
+<!-- Product section omitted for brevity -->
 
 <nav id="sidebar" class="sidebar"><p>Menu sidebar content goes here.</p></nav>
 <nav id="cartSidebar" class="cart-sidebar"><p>Cart sidebar content goes here.</p></nav>
@@ -403,12 +383,17 @@
 
   window.addEventListener('scroll', () => {
     const scrollY = window.scrollY;
-    if (scrollY > 60) {
-      logoText.style.display = 'none';
-      logoImage.style.display = 'block';
-    } else {
-      logoText.style.display = 'block';
-      logoImage.style.display = 'none';
+    const sidebarOpen = document.body.classList.contains('sidebar-open');
+    const cartOpen = document.body.classList.contains('cart-open');
+
+    if (!sidebarOpen && !cartOpen) {
+      if (scrollY > 60) {
+        logoText.style.display = 'none';
+        logoImage.style.display = 'block';
+      } else {
+        logoText.style.display = 'block';
+        logoImage.style.display = 'none';
+      }
     }
   });
 
