--- a/jersey/red.html
+++ b/jersey/red.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TWO-FIVE JERSEY (RED) | Matt Scianna</title>
+  <title>TWO-FIVE JERSEY (RED) - Matt Scianna</title>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * {
@@ -14,346 +14,185 @@
 
     body {
       font-family: 'Oswald', sans-serif;
-      background-color: white;
-      text-align: center;
-      color: black;
-      user-select: none;
-      overflow-x: hidden;
-      transition: overflow 0.3s ease;
+      background-color: black;
+      color: white;
+      padding-top: 80px;
     }
 
-    body.sidebar-open {
-      overflow: hidden;
-    }
-
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 64px;
+    /* Header */
+    .header-container {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 8px 16px;
-      background-color: white;
-      z-index: 1200;
-      border-bottom: 1px solid #ccc;
-    }
-
-    .menu-icon {
-      width: 22px;
-      height: 16px;
-      margin-top: -2px;
-      position: relative;
-      cursor: pointer;
-    }
-
-    .menu-icon div {
-      position: absolute;
-      width: 100%;
-      height: 2px;
       background-color: black;
-      transition: all 0.4s ease;
-    }
-
-    .menu-icon div:nth-child(1) { top: 0; }
-    .menu-icon div:nth-child(2) { top: 7px; }
-    .menu-icon div:nth-child(3) { top: 14px; }
-
-    .menu-icon.open div:nth-child(1) {
-      transform: rotate(45deg);
-      top: 7px;
-    }
-
-    .menu-icon.open div:nth-child(2) {
-      opacity: 0;
-    }
-
-    .menu-icon.open div:nth-child(3) {
-      transform: rotate(-45deg);
-      top: 7px;
-    }
-
-    .logo-container {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      align-items: center;
-      height: 100%;
-      cursor: pointer;
+      color: white;
+      padding: 1rem;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
     }
 
     .logo {
-      height: 36px;
-      transition: opacity 0.3s ease, height 0.3s ease;
-      display: block;
+      font-size: 1.5rem;
+      color: white;
     }
 
-    .logo.alt {
-      display: none;
-    }
-
-    .cart-icon-container {
-      display: flex;
-      align-items: flex-start;
-      margin-top: -2px;
-      height: 22px;
+    .menu-icon {
       cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
     }
 
-    .cart-icon {
-      height: 22px;
+    .menu-icon span {
+      display: block;
+      width: 25px;
+      height: 3px;
+      background: white;
     }
 
+    .cart-icon img {
+      width: 28px;
+      height: 28px;
+    }
+
+    /* Sidebar */
     .sidebar {
       position: fixed;
       top: 0;
       left: -100%;
-      width: 100vw;
-      height: 100vh;
-      background: white;
-      font-family: 'Oswald', sans-serif;
-      font-weight: 400;
-      font-size: 24px;
-      padding: 80px 20px;
-      transition: left 0.4s ease-in-out;
-      z-index: 1100;
-      text-align: left;
-      overflow-y: auto;
-    }
-
-    .sidebar.open {
-      left: 0;
-    }
-
-    main, .product-image, .carousel-indicators, .color-label, .sizes, .sold-out-btn, h1 {
-      font-family: 'Oswald', sans-serif;
-    }
-
-    h1.product-title {
-      margin-top: 80px;
-      font-weight: 700;
-      font-size: 20px;
-      margin-bottom: 20px;
-      user-select: none;
-      border-bottom: none;
-    }
-
-    .product-image {
-      position: relative;
-      width: 100%;
-      max-width: 480px;
-      height: 480px; /* Reduced height */
-      margin: 0 auto 20px auto;
-      background-color: transparent; /* No background */
-      border-radius: 8px;
-      overflow: hidden;
+      width: 250px;
+      height: 100%;
+      background-color: black;
+      padding: 2rem 1rem;
+      transition: left 0.3s ease;
       display: flex;
-      align-items: center;
-      justify-content: center;
+      flex-direction: column;
+      gap: 1.5rem;
+      z-index: 999;
     }
 
-    .product-image img {
-      max-width: 100%;
-      max-height: 100%;
-      display: block;
-      object-fit: contain;
-      background: transparent;
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.2rem;
     }
 
-    .arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 36px;
-      height: 36px;
+    .sidebar .close-btn {
+      align-self: flex-end;
+      font-size: 2rem;
       cursor: pointer;
-      opacity: 0.7;
-      transition: opacity 0.2s ease;
-      fill: white;
-      user-select: none;
+      color: white;
     }
 
-    .arrow:hover {
-      opacity: 1;
-    }
-
-    .arrow-left { left: 8px; }
-    .arrow-right { right: 8px; }
-
-    .carousel-indicators {
+    .product-container {
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      gap: 8px;
-      margin: 16px 0;
+      padding: 2rem;
     }
 
-    .carousel-indicators div {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
+    .carousel {
+      width: 100%;
+      max-width: 600px;
+      overflow: hidden;
+      margin-bottom: 1rem;
+    }
+
+    .carousel img {
+      width: 100%;
+      display: block;
+    }
+
+    .product-title {
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .price {
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+    }
+
+    .description {
+      font-size: 1rem;
+      max-width: 600px;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
+    .add-to-cart {
+      background-color: white;
+      color: black;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .add-to-cart:hover {
       background-color: #ccc;
     }
 
-    .carousel-indicators .active {
-      background-color: black;
-    }
+    @media (max-width: 600px) {
+      .product-title {
+        font-size: 1.5rem;
+      }
 
-    .color-label {
-      margin: 10px 0;
-      font-weight: 700;
-      font-size: 16px;
-      color: black;
-      user-select: none;
-    }
-
-    .sizes {
-      display: flex;
-      justify-content: center;
-      gap: 16px;
-      margin: 16px 0;
-      font-size: 16px;
-      user-select: none;
-    }
-
-    .sizes button {
-      background: transparent;
-      color: black;
-      border: none;
-      font-weight: 700;
-      font-size: 16px;
-      cursor: pointer;
-      padding: 6px 8px;
-      transition: color 0.3s ease;
-    }
-
-    .sizes button:hover {
-      color: #555;
-      text-decoration: underline;
-    }
-
-    .sold-out-btn {
-      background-color: black;
-      color: white;
-      border: none;
-      padding: 16px;
-      font-size: 16px;
-      width: 90%;
-      max-width: 400px;
-      margin: 20px auto 20px auto;
-      display: block;
-      border-radius: 6px;
-      cursor: pointer;
-      user-select: none;
-    }
-
-    footer {
-      padding: 20px 0;
-      font-size: 14px;
-      color: #555;
-    }
-
-    @media (min-width: 768px) {
-      header { display: none; }
+      .description {
+        font-size: 0.9rem;
+      }
     }
   </style>
 </head>
 <body>
+  <!-- Header -->
+  <header>
+    <div class="header-container">
+      <div class="menu-icon" onclick="toggleSidebar()">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <h1 class="logo">TWO-FIVE</h1>
+      <div class="cart-icon">
+        <a href="cart.html">
+          <img src="cart-icon.png" alt="Cart" />
+        </a>
+      </div>
+    </div>
+  </header>
 
-<header>
-  <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
-    <div></div><div></div><div></div>
+  <!-- Sidebar -->
+  <aside class="sidebar" id="sidebar">
+    <div class="close-btn" onclick="toggleSidebar()">×</div>
+    <a href="index.html">HOME</a>
+    <a href="shop.html">SHOP</a>
+    <a href="contact.html">CONTACT</a>
+  </aside>
+
+  <!-- Product Section -->
+  <div class="product-container">
+    <div class="carousel">
+      <img src="jersey-red-front.jpg" alt="TWO-FIVE Jersey Front" />
+    </div>
+    <h2 class="product-title">TWO-FIVE JERSEY (RED)</h2>
+    <p class="price">$59.99</p>
+    <p class="description">
+      Represent the movement in bold red. The TWO-FIVE jersey features premium
+      stitching, lightweight breathable mesh, and a tailored fit made for the
+      culture. Limited quantities available.
+    </p>
+    <button class="add-to-cart">ADD TO CART</button>
   </div>
 
-  <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo Text" class="logo" id="logoText" />
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MS%20LOGO%20BLACK.png?raw=true" alt="Matt Scianna Logo Icon" class="logo alt" id="logoIcon" />
-  </div>
-
-  <div class="cart-icon-container" title="Cart">
-    <img src="https://cdn-icons-png.flaticon.com/512/3144/3144456.png" alt="Cart Icon" class="cart-icon" />
-  </div>
-</header>
-
-<div class="sidebar" role="navigation" aria-label="Main Sidebar">
-  <p>Link 1</p>
-  <p>Link 2</p>
-  <p>Link 3</p>
-  <p>Link 4</p>
-  <p>Link 5</p>
-  <p>Link 6</p>
-  <p>Link 7</p>
-  <p>Link 8</p>
-</div>
-
-<main>
-  <h1 class="product-title">TWO-FIVE JERSEY (RED)</h1>
-
-  <div class="product-image" id="productImageBox">
-    <img 
-      id="productImage" 
-      src="https://github.com/mattscianna/mattscianna/blob/main/JERSEYPNG.png?raw=true" 
-      alt="TWO-FIVE Jersey Red" 
-    />
-  </div>
-
-  <div class="carousel-indicators" role="tablist" aria-label="Image carousel navigation">
-    <div class="active" role="tab" aria-selected="true" tabindex="0"></div>
-    <div role="tab" tabindex="0"></div>
-    <div role="tab" tabindex="0"></div>
-  </div>
-
-  <div class="color-label">RED</div>
-
-  <div class="sizes" role="list" aria-label="Available sizes">
-    <button role="listitem">S</button>
-    <button role="listitem">M</button>
-    <button role="listitem">L</button>
-    <button role="listitem">XL</button>
-    <button role="listitem">XXL</button>
-  </div>
-
-  <button class="sold-out-btn">ADD TO CART</button>
-</main>
-
-<footer>
-  &copy; 2025 Matt Scianna
-</footer>
-
-<script>
-  // Sidebar toggle
-  const menuToggle = document.getElementById('menuToggle');
-  const sidebar = document.querySelector('.sidebar');
-  const body = document.body;
-
-  menuToggle.addEventListener('click', () => {
-    menuToggle.classList.toggle('open');
-    sidebar.classList.toggle('open');
-    body.classList.toggle('sidebar-open');
-  });
-
-  menuToggle.addEventListener('keypress', (e) => {
-    if (e.key === 'Enter' || e.key === ' ') {
-      e.preventDefault();
-      menuToggle.click();
+  <script>
+    function toggleSidebar() {
+      const sidebar = document.getElementById('sidebar');
+      sidebar.style.left = sidebar.style.left === '0px' ? '-100%' : '0px';
     }
-  });
-
-  // Logo click
-  const logoContainer = document.getElementById('logoContainer');
-  logoContainer.addEventListener('click', () => {
-    window.location.href = 'https://mattscianna.com/website/';
-  });
-
-  logoContainer.addEventListener('keypress', (e) => {
-    if (e.key === 'Enter' || e.key === ' ') {
-      window.location.href = 'https://mattscianna.com/website/';
-    }
-  });
-</script>
-
+  </script>
 </body>
 </html>
